--- a/Final Project/Final Project.vbproj
+++ b/Final Project/Final Project.vbproj
@@ -46,6 +46,9 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Hardcodet.NotifyIcon.Wpf, Version=1.1.0.0, Culture=neutral, PublicKeyToken=682384a853a08aad, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hardcodet.NotifyIcon.Wpf.1.1.0\lib\net472\Hardcodet.NotifyIcon.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -100,9 +103,16 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="BookingPage.aspx" />
+    <Content Include="Delete_booking.aspx" />
+    <Content Include="Edit_booking.aspx" />
     <Content Include="Log_In_Page.aspx" />
     <Content Include="main_page.aspx" />
     <Content Include="Register_page.aspx" />
+    <None Include="Scripts\jquery-3.6.0.intellisense.js" />
+    <Content Include="Scripts\jquery-3.6.0.js" />
+    <Content Include="Scripts\jquery-3.6.0.min.js" />
+    <Content Include="Scripts\jquery-3.6.0.slim.js" />
+    <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +121,20 @@
     </Compile>
     <Compile Include="BookingPage.aspx.vb">
       <DependentUpon>BookingPage.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Delete_booking.aspx.designer.vb">
+      <DependentUpon>Delete_booking.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Delete_booking.aspx.vb">
+      <DependentUpon>Delete_booking.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Edit_booking.aspx.designer.vb">
+      <DependentUpon>Edit_booking.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_booking.aspx.vb">
+      <DependentUpon>Edit_booking.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Log_In_Page.aspx.designer.vb">
@@ -174,6 +198,8 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="packages.config" />
+    <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
+    <Content Include="Scripts\jquery-3.6.0.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
