--- a/Final Project/packages.config
+++ b/Final Project/packages.config
@@ -3,4 +3,5 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.1.0" targetFramework="net472" />
   <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Tulpep.NotificationWindow" version="1.1.38" targetFramework="net472" />
 </packages>
